[package]
name = "cat_discord"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.101", features = ["derive"] }
reqwest = "0.9.22"
serenity = "0.7.2"
serde_json = "1.0.41"
parking_lot = "0.9.0"
