[package]
name = "cat_discord"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.101", features = ["derive"] }
reqwest = "0.11.0"
serenity = { version = "0.10.2", default-features = false, features = ["rustls_backend", "builder", "cache", "client", "gateway", "model", "http", "utils"]}
serde_json = "1.0.41"
tokio = { version = "1.18.5", features = ["rt", "macros"] }
